fix scrollbar issues, make scrollbar rounded

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ nav.heading {
     width: 100%;
     top: 0;
     z-index: 10;
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .08);
+    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.06);
     border-bottom: 1px solid #dee4e9;
 }
 
@@ -40,7 +40,6 @@ ul.heading-ul {
     min-height: 58px;
     float: left;
     list-style-type: none;
-    /* background-color: #ebebff; */
     background-image: url('background.gif');
 }
 
@@ -159,7 +158,21 @@ nav.sidebar {
     display: block;
     position: fixed;
     margin: 0px;
-    margin-top: 58px;
+    margin-top: 60px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    padding: 14px 0px 20px;
+    width: 250px;
+    overflow-y: auto;
+    z-index: 5;
+}
+
+.sidebar-background {
+    display: block;
+    position: fixed;
+    margin: 0px;
+    margin-top: 0px;
     top: 0;
     left: 0;
     bottom: 0;
@@ -168,20 +181,8 @@ nav.sidebar {
     background-color: #f8f9fa;
     border-right: 1px solid #dee4e9;
     overflow-y: auto;
-    z-index: 5;
+    z-index: 3;
 }
-
-
-/* div.sidebar-holder {
-    display: block;
-    overflow-x: hidden;
-    overflow-y: auto;
-} */
-
-
-/* div.sidebar-holder {
-    text-align: justify;
-} */
 
 nav.sidebar ul {
     list-style-type: none;
@@ -211,7 +212,6 @@ nav.sidebar a:hover {
 }
 
 nav.sidebar a.current {
-    /* background-color: #2e3a44; */
     background-color: #dee4e9;
     color: #003866;
 }
@@ -263,16 +263,14 @@ nav.sidebar a.current {
     display: grid;
     margin: 5px;
     padding: 20px;
-    /* flex-grow: 1; */
     flex: 1 1 0px;
     height: 200px;
     background-color: #eef0f1;
     font-size: 25px;
-    /* border: 1px solid #dee4e9; */
     border-radius: 6px;
     text-align: center;
     place-items: center;
-    box-shadow: 0rem 0rem 1rem rgba(0, 0, 0, .1);
+    box-shadow: 0rem 0rem 0.5rem rgba(0, 0, 0, 0.12);
 }
 
 .blue {
@@ -300,10 +298,9 @@ nav.sidebar a.current {
     margin-bottom: 10px;
     padding: 20px;
     flex: 1 1 0px;
-    /* background-color: #eef0f1; */
     border: 1px solid #dee4e9;
     border-radius: 6px;
-    box-shadow: 0rem 0rem 1rem rgba(0, 0, 0, .1);
+    box-shadow: 0rem 0rem 0.5rem rgba(0, 0, 0, .12);
 }
 
 .chart {
@@ -318,9 +315,11 @@ nav.sidebar a.current {
 #more-bar {
     display: none;
 }
+
 .title-full-name {
     display: inline;
 }
+
 .title-short-name {
     display: none;
 }
@@ -333,6 +332,10 @@ nav.sidebar a.current {
         display: block;
     }
     nav.sidebar {
+        display: none;
+        width: 100%;
+    }
+    .sidebar-background {
         display: none;
         width: 100%;
         border: none;
@@ -358,10 +361,12 @@ nav.sidebar a.current {
     }
 }
 
+
 /* Scrollbar (not supported in Firefox) */
 
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 8px;
+    height: 8px;
 }
 
 ::-webkit-scrollbar-track {
@@ -370,6 +375,7 @@ nav.sidebar a.current {
 
 ::-webkit-scrollbar-thumb {
     background: #696c70;
+    border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
